# mcu-fpga-peripheral

./: .gitmodules  README.md
example-f103/: .gitignore  Cargo.toml
example-f103/src/: main.rs
example-f411/: Cargo.toml  Embed.toml  memory.x
example-f411/src/: main.rs
icebreaker-soc/: hard_spi.py  soc.py  spi_slave.py
icecompr/: Cargo.toml
icecompr/examples/: decompress.rs
icecompr/src/: lib.rs
litex-pac/: Cargo.toml  build.rs  soc.svd
litex-pac/src/: lib.rs  register.rs  register_shim.rs
litex-pac/src/soc/: metadata.rs  mod.rs
litex-pac/src/soc/instances/: ctrl.rs  leds.rs
litex-pac/src/soc/peripherals/: ctrl.rs  leds.rs  mod.rs
svd2ral/: Cargo.toml
svd2ral/src/: convert.rs  lib.rs  types.rs
